tests/cases/function/expand_fail/03_rename_same_name.rs
#![no_main]

use split_async::split;

#[split(a, a)]
async fn func() {}
